# RAG

./: .env.example  .gitignore  1.RAG_with_own_text.ipynb  2.RAG_pdf.ipynb  3.RAG_local_persist.ipynb  4.RAG_add_multiple_docs.ipynb  4.RAG_run_with_Vector_folder.ipynb  README.md  pyproject.toml
Vector/: index.faiss  index.pkl
