[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
]
